--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-17.68MB/s(Youtube:不良林), server: hk-cnrelay-14-142345.dukou.info, port: 8314, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-cnrelay-14-142345.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-932.3KB/s(Youtube:不良林), server: ru02-cu-2240.dukou.info, port: 2302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: ru02-cu-2240.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.99MB/s(Youtube:不良林), server: kr-cn-relay-2-32v22.dukou.info, port: 3302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: kr-cn-relay-2-32v22.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.26MB/s(Youtube:不良林), server: shanghai-router1-892412-jp1.dukou.info, port: 6301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: shanghai-router1-892412-jp1.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.30MB/s(Youtube:不良林), server: kr-cn-relay-1-452x4.dukou.info, port: 3301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: kr-cn-relay-1-452x4.dukou.info, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-3.03MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.75MB/s(Youtube:不良林), server: 106.75.168.104, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.53MB/s(Youtube:不良林), server: us-cn-hk-relay-2-3cc426.dukou.info, port: 7302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: us-cn-hk-relay-2-3cc426.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.57MB/s(Youtube:不良林), server: ru01-cu-1120.dukou.info, port: 2301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: ru01-cu-1120.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-17.62MB/s(Youtube:不良林), server: sg-cn-hk-relay-3-dd4440.dukou.info, port: 9303, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-hk-relay-3-dd4440.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.88MB/s(Youtube:不良林), server: 106.75.168.104, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇭🇰 香港-582.2KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
   - {name: 🇬🇧 英国-3.00MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.09MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.20MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-2.76MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-17.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-17.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-17.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
       - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-17.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-17.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-17.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-17.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-932.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
