--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.75MB/s(Youtube:不良林), server: 106.75.168.104, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.53MB/s(Youtube:不良林), server: us-cn-hk-relay-2-3cc426.dukou.info, port: 7302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: us-cn-hk-relay-2-3cc426.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.57MB/s(Youtube:不良林), server: ru01-cu-1120.dukou.info, port: 2301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: ru01-cu-1120.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-17.62MB/s(Youtube:不良林), server: sg-cn-hk-relay-3-dd4440.dukou.info, port: 9303, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-hk-relay-3-dd4440.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.88MB/s(Youtube:不良林), server: 106.75.168.104, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-3.36MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-8.12MB/s(Youtube:不良林), server: sg-cn-hk-relay-1-767f45.dukou.info, port: 9301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-hk-relay-1-767f45.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.95MB/s(Youtube:不良林), server: hk-route2-azure-hk8.dukou.info, port: 8308, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route2-azure-hk8.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-314.9KB/s(Youtube:不良林), server: 106.75.168.104, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇭🇰 香港-582.2KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
   - {name: 🇬🇧 英国-3.00MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.20MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-2.76MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-3.39MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.20MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.20MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.20MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -74,47 +74,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.20MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.20MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.20MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
       - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.20MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
