--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-3.36MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-8.12MB/s(Youtube:不良林), server: sg-cn-hk-relay-1-767f45.dukou.info, port: 9301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-hk-relay-1-767f45.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.95MB/s(Youtube:不良林), server: hk-route2-azure-hk8.dukou.info, port: 8308, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route2-azure-hk8.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-314.9KB/s(Youtube:不良林), server: 106.75.168.104, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-582.2KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇬🇧 英国-3.00MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-2.76MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-3.39MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林), server: v2.ssrsub.com, port: 153, type: vmess, uuid: 640e3ef0-9c44-49a8-98f6-0895b11eecd6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
+  - {name: 🇨🇳 中国-6.18MB/s(Youtube:不良林), server: ru01-cu-1120.dukou.info, port: 2301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: ru01-cu-1120.dukou.info, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-12.23MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.36MB/s(Youtube:不良林), server: 113.31.109.30, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-448.1KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.64MB/s(Youtube:不良林), server: rnlax.looki.top, port: 12356, type: vmess, uuid: 4f7aac16-bafc-4bcc-8425-5b3afa67ba12, alterId: 66, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /090d1f06ee93/, ws-headers: {Host: rnlax.looki.top}}
+  - {name: 未知国家-1.44MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: 57229afb-d4e4-426e-bfdc-18fc1f3267fd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
+  - {name: 🇺🇸 美国-952.2KB/s(Youtube:不良林), server: 142.4.101.137, port: 20561, type: vmess, uuid: cf3eb126-ffbf-4452-91de-7393b6028782, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nmLuM34N/, ws-headers: {Host: 142.4.101.137}}
+  - {name: 未知国家-526.4KB/s(Youtube:不良林), server: lu1.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3908b44d1be0a4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: lu1.gogogoo.cyou}}
+  - {name: 🇺🇸 美国-2.87MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32453, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-3.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-448.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.64MB/s(Youtube:不良林)
+      - 未知国家-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-952.2KB/s(Youtube:不良林)
+      - 未知国家-526.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-3.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-448.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.64MB/s(Youtube:不良林)
+      - 未知国家-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-952.2KB/s(Youtube:不良林)
+      - 未知国家-526.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-3.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-448.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.64MB/s(Youtube:不良林)
+      - 未知国家-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-952.2KB/s(Youtube:不良林)
+      - 未知国家-526.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-3.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-448.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.64MB/s(Youtube:不良林)
+      - 未知国家-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-952.2KB/s(Youtube:不良林)
+      - 未知国家-526.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-3.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-448.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.64MB/s(Youtube:不良林)
+      - 未知国家-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-952.2KB/s(Youtube:不良林)
+      - 未知国家-526.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-3.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-448.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.64MB/s(Youtube:不良林)
+      - 未知国家-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-952.2KB/s(Youtube:不良林)
+      - 未知国家-526.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-3.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇭🇰 香港-582.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-448.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.64MB/s(Youtube:不良林)
+      - 未知国家-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-952.2KB/s(Youtube:不良林)
+      - 未知国家-526.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
