--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.35MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
-  - {name: 🇫🇷 法国-2.77MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-8.03MB/s(Youtube:不良林), server: sg-cn-relay-7-74812.dukou.info, port: 9307, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-relay-7-74812.dukou.info, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-7.02MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.45MB/s(Youtube:不良林), server: hk-cnrelay-13-138465.dukou.info, port: 8313, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-cnrelay-13-138465.dukou.info, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.64MB/s(Youtube:不良林), server: rnlax.looki.top, port: 12356, type: vmess, uuid: 4f7aac16-bafc-4bcc-8425-5b3afa67ba12, alterId: 66, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /090d1f06ee93/, ws-headers: {Host: rnlax.looki.top}}
-  - {name: 未知国家-1.44MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: 57229afb-d4e4-426e-bfdc-18fc1f3267fd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
+  - {name: 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.76MB/s(Youtube:不良林), server: hk6.ningmengshui.xyz, port: 80, type: vmess, uuid: 1e9f956b-1720-4519-b5c9-333247f6c23f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk6.ningmengshui.xyz}}
+  - {name: 🇨🇳 中国-8.61MB/s(Youtube:不良林), server: kr-cn-relay-1-452x4.dukou.info, port: 3301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: kr-cn-relay-1-452x4.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.76MB/s(Youtube:不良林), server: tw-cn-hk-relay-2-184a76.dukou.info, port: 5302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: tw-cn-hk-relay-2-184a76.dukou.info, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.01MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇺🇸 美国-2.26MB/s(Youtube:不良林), server: rnlax.looki.top, port: 12356, type: vmess, uuid: 4f7aac16-bafc-4bcc-8425-5b3afa67ba12, alterId: 66, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /090d1f06ee93/, ws-headers: {Host: rnlax.looki.top}}
   - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: 142.4.101.137, port: 20561, type: vmess, uuid: cf3eb126-ffbf-4452-91de-7393b6028782, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nmLuM34N/, ws-headers: {Host: 142.4.101.137}}
-  - {name: 未知国家-526.4KB/s(Youtube:不良林), server: lu1.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3908b44d1be0a4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: lu1.gogogoo.cyou}}
+  - {name: 🇺🇸 美国-526.4KB/s(Youtube:不良林), server: lu1.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3908b44d1be0a4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: lu1.gogogoo.cyou}}
   - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32453, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.64MB/s(Youtube:不良林)
-      - 未知国家-1.44MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 未知国家-526.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-526.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.64MB/s(Youtube:不良林)
-      - 未知国家-1.44MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 未知国家-526.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-526.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.64MB/s(Youtube:不良林)
-      - 未知国家-1.44MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 未知国家-526.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-526.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.64MB/s(Youtube:不良林)
-      - 未知国家-1.44MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 未知国家-526.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-526.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.64MB/s(Youtube:不良林)
-      - 未知国家-1.44MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 未知国家-526.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-526.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.64MB/s(Youtube:不良林)
-      - 未知国家-1.44MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 未知国家-526.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-526.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-7.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.64MB/s(Youtube:不良林)
-      - 未知国家-1.44MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 未知国家-526.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-526.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
